<resources>
    <string name="app_name">My Application</string>
    <string name="app_Name">Name</string>
    <string name="app_Age">Age</string>
    <string name="app_Button">Ejecutar</string>
    <string name="app_radioButtonM">Masculino</string>
    <string name="app_radioButtonF">Femenino</string>
    <string name="title_activity_menu_slide">MenuSlideActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crear">Crear</string>
    <string name="crear_evidencia">Crear Evidencia</string>
    <string name="nueva_evidencia">Nueva Evidencia</string>
    <string name="carrera">Carrera</string>

    <string name="titulo">Titulo</string>
    <string name="enviar_evidencia">Enviar Evidencia</string>
    <string name="carrera2">Carrera:</string>
    <string name="tipo">Tipo</string>
    <string name="lista_de_evidencias">Lista de Evidencias</string>
</resources>
