<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".CrearFragment" android:id="@+id/crear">


    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/escenario"
            android:background="@drawable/side_nav_bar">


        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/nueva_evidencia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:background="@drawable/banner_title"
                        android:id="@+id/textView2" android:textSize="30sp"/>

                <TextView
                        android:text="@string/carrera2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:id="@+id/textView3" android:layout_marginTop="20dp"/>
                <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:popupBackground="#DFFFFF"
                        android:id="@+id/spinner"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/titulo"
                        android:ems="10"
                        android:id="@+id/txtTitulo" android:autofillHints="" android:layout_marginTop="10dp"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:gravity="start|top"
                        android:ems="10"
                        android:id="@+id/txtDes" android:hint="Descripcion" android:layout_marginTop="10dp"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="100dp" android:layout_marginTop="10dp">
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:layout_weight="1">
                        <TextView
                                android:text="Alcance"
                                android:textSize="20sp"
                                android:layout_width="210dp"
                                android:layout_height="wrap_content" android:id="@+id/textView4"
                                android:layout_weight="1" android:layout_marginRight="10dp"/>
                        <Spinner
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" android:id="@+id/sp_alcance"
                                android:layout_weight="1"
                                android:layout_marginRight="10dp"/>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:layout_weight="1">
                        <TextView
                                android:text="Ambito"
                                android:textSize="20sp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" android:id="@+id/textView5"
                                android:layout_weight="1" android:layout_marginLeft="10dp"/>
                        <Spinner
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" android:id="@+id/sp_ambito"
                                android:layout_weight="1"
                                android:layout_marginLeft="10dp"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                        android:text="@string/tipo"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView7"
                        android:layout_marginTop="15dp"/>
                <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="40dp" android:id="@+id/sp_tipo"/>

                <TextView

                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/banner_title"
                        android:gravity="center"
                        android:text="Cant. de personas afectadas"
                        android:textSize="20sp" />
                <TextView
                        android:text="Interior"
                        android:textSize="20dp"
                        android:background="@drawable/banner_sub_title"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content" android:id="@+id/textView8"
                        android:layout_marginTop="5dp"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:layout_marginTop="15dp">
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">
                        <TextView
                                android:text="Estudiantes"
                                android:layout_width="210dp"
                                android:textSize="20sp"
                                android:layout_height="wrap_content" android:id="@+id/textView12"
                                android:layout_marginRight="10dp"/>
                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:ems="10"
                                android:id="@+id/idEstudiantes" android:layout_marginRight="10dp"

                        />
                        <TextView
                                android:text="Autoridades"
                                android:layout_width="210dp"
                                android:textSize="20sp"
                                android:layout_height="wrap_content" android:id="@+id/textView10"
                                android:layout_marginRight="10dp" android:layout_marginTop="15dp"/>
                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:ems="10"
                                android:id="@+id/idAutoridades" android:layout_marginRight="10dp"

                        />
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <TextView
                                android:text="Profesores"
                                android:textSize="20sp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" android:id="@+id/textView9"
                                android:layout_marginLeft="10dp"/>
                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:ems="10"
                                android:id="@+id/idProfe" android:layout_marginLeft="10dp"/>
                        <TextView
                                android:text="Profesionales"
                                android:layout_width="210dp"
                                android:textSize="20sp"
                                android:layout_height="wrap_content" android:id="@+id/textView13"
                                android:layout_marginRight="10dp" android:layout_marginTop="15dp"/>
                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:ems="10"
                                android:id="@+id/idProfesionales"

                        />
                    </LinearLayout>
                </LinearLayout>
                <TextView
                        android:text="Externo"
                        android:background="@drawable/banner_sub_title"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:id="@+id/textView11" android:layout_marginTop="20dp"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:layout_marginTop="15dp">
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">
                        <TextView
                                android:text="Estudiantes"
                                android:layout_width="210dp"
                                android:textSize="20sp"
                                android:layout_height="wrap_content" android:id="@+id/textView14"
                                android:layout_marginRight="10dp"/>
                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:ems="10"
                                android:id="@+id/idEst_ext" android:layout_marginRight="10dp"

                        />
                        <TextView
                                android:text="Autoridades"
                                android:layout_width="210dp"
                                android:textSize="20sp"
                                android:layout_height="wrap_content" android:id="@+id/textView15"
                                android:layout_marginRight="10dp" android:layout_marginTop="15dp"/>
                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:ems="10"
                                android:id="@+id/idAutor_ext" android:layout_marginRight="10dp"

                        />
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <TextView
                                android:text="Profesores"
                                android:textSize="20sp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" android:id="@+id/textView16"
                                android:layout_marginLeft="10dp"/>
                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:ems="10"
                                android:id="@+id/idProfe_ext" android:layout_marginLeft="10dp"/>
                        <TextView
                                android:text="Profesionales"
                                android:layout_width="210dp"
                                android:textSize="20sp"
                                android:layout_height="wrap_content" android:id="@+id/textView17"
                                android:layout_marginRight="10dp" android:layout_marginTop="15dp"/>
                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:ems="10"
                                android:id="@+id/idProfesionales_ext"

                        />
                    </LinearLayout>
                </LinearLayout>
                <Button
                        android:text="@string/enviar_evidencia"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_rounded"
                        android:layout_gravity="center"
                        android:id="@+id/button"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"/>


            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>